2005-07-22 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeVolumeUVSimplex) added to help get
	surface edges to split.

2005-07-22 15:22 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) replaced the
	gridCollapseEdge undo call with direct logic that will not fail if
	grid is nearly bad.

2005-07-22 13:43 Mike Park  <mike.park@nasa.gov>

	* src/grid.h (struct Grid) increased size of grid->equ array to
	avoid writing past the end of the array when calling gridEquator.

2005-07-21 16:53 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmooth) only hit nodes once for speed.

2005-07-21 13:27 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) added to split an interior
	edge by optimizing volume (minimum Jacobian).
	* src/gridinsert.c (gridAdaptLongShort) try gridSplitEdgeForce to split.

2005-07-21 10:11 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptLongShort) added debug_split option.

2005-07-21 08:39 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotEquator) added to debug surface edge
	splitting.

2005-07-20 15:00 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptLongShort) added to do all splits first
	and then do all the collapses.
	* src/unit_main.c (main) call gridAdaptLongShort in normal mode.

2005-07-19 13:40 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) add option to -le to control radial spacing.

2005-07-18 16:34 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmooth) used plan to smooth nodes of bad cells
	first, to try and get better meshes.

2005-07-18 15:30 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwap) used plan to swap really bad cells
	first, to try and get better meshes.

2005-07-18 13:55 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridConnValue,gridSetConnValue) removed.
	* src/grid.c (gridSortConnValues,gridConnWithThisRanking) removed.

2005-07-18 13:47 Mike Park  <mike.park@nasa.gov>
